SameSizeAsInlineBox mismatch on ARMV7. https://bugs.webkit.org/show_bug.cgi?id=172459

Reviewed by Simon Fraser.

Due to the ARMV7/i386 padding behaviour mismatch, forcing m_bitfields to be 32bits does not always
produce the desired padding.
Move the bool to the end of the member list and let m_deletionSentinel (4bytes) force
padding.

* rendering/InlineBox.cpp:
* rendering/InlineBox.h:


Canonical link: https://commits.webkit.org/189367@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217242 268f45cc-cd09-0410-ab3c-d52691b4dbfc